# RoboCup_Humanoid_Soccer_Localization_2022

./: README.md
localization_v2/: CMakeLists.txt  CMakeLists.txt.user.21  CMakeLists.txt.user.5c986c1  likelihoodData.txt  mainpage.dox  package.xml  update _
localization_v2/data/: 0205likelihoodData_(Zhit_0.5,Zrand_0.01,Zmax_0.6,Sigmahit_0 .15)  0205likelihoodData_(Zhit_0.5,Zrand_0.01,Zmax_0.6,Sigmahit_0 .15)PC  0207likelihoodData_(Zhit_0.5,Zrand_0.01,Zmax_0.6,Sigmahit_0.15)  0207likelihoodData_(Zhit_0.5,Zrand_0.01,Zmax_0.6,Sigmahit_0.15)PC  0222likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_1.4,Sigmahit_0 .15)  0222likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_1.4,Sigmahit_0 .15)PC  0225likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_0.6,Sigmahit_0.15)  0304_Zhit0.3,Zrand0.01,Zmax0.6,Sigmahit0.15  0304_Zhit0.3,Zrand0.01,Zmax0.6,Sigmahit0.15_L  0315likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_1.4,Sigmahit_0.15)  0315likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_1.4,Sigmahit_0.15)PC  0316likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_1.4,Sigmahit_0.15)  0316likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_1.4,Sigmahit_0.15)_L  0317likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_1.2,Sigmahit_0.15)  0317likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_1.2,Sigmahit_0.15)PC  0317likelihoodData_(Zhit_0.3,Zrand_0.01,Zmax_1.2,Sigmahit_0.15)_L  0317likelihoodData_(Zhit_0.5,Zrand_0.01,Zmax_1.4,Sigmahit_0.15)  0317likelihoodData_(Zhit_0.5,Zrand_0.01,Zmax_1.4,Sigmahit_0.15)PC  0317likelihoodData_(Zhit_0.5,Zrand_0.01,Zmax_1.4,Sigmahit_0.15)_L  0318_powerfull_for_PC  0318_powerfull_for_PCPC  0318_powerfull_for_PC_L  2022_new_test  allno  (+37 more)
(+18 files in other folders)
